trunk/Archive2/c0/249728b91ac344/output
main.cpp:1:1: error: expected unqualified-id
|| g++ -std=c++0x -Wall -pedantic -g -O0 -isystem ~/custom/boost/ test.cpp -o test 
^
1 error generated.
