trunk/Archive2/c0/249728b91ac344/main.cpp
|| g++ -std=c++0x -Wall -pedantic -g -O0 -isystem ~/custom/boost/ test.cpp -o test 
